--- a/UIs/nInterferometry1.ui
+++ b/UIs/nInterferometry1.ui
@@ -13,42 +13,15 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout" columnstretch="1,0,0,0">
+  <layout class="QGridLayout" name="gridLayout" columnstretch="1,0,0,0,0">
    <property name="verticalSpacing">
     <number>1</number>
    </property>
    <property name="margin">
     <number>0</number>
    </property>
-   <item row="2" column="1">
-    <widget class="QLabel" name="label_2">
-     <property name="font">
-      <font>
-       <pointsize>10</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>to</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0" colspan="4">
-    <widget class="QComboBox" name="image">
-     <property name="font">
-      <font>
-       <pointsize>10</pointsize>
-      </font>
-     </property>
-     <property name="neutrinoImage" stdset="0">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0">
-    <widget class="QDoubleSpinBox" name="minStretch">
+   <item row="1" column="2">
+    <widget class="QDoubleSpinBox" name="maxStretch">
      <property name="font">
       <font>
        <pointsize>10</pointsize>
@@ -74,8 +47,23 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="2">
-    <widget class="QDoubleSpinBox" name="maxStretch">
+   <item row="2" column="1">
+    <widget class="QLabel" name="label_2">
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>to</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QDoubleSpinBox" name="minStretch">
      <property name="font">
       <font>
        <pointsize>10</pointsize>
@@ -206,6 +194,29 @@
      </property>
     </widget>
    </item>
+   <item row="0" column="0" colspan="3">
+    <widget class="QComboBox" name="image">
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="neutrinoImage" stdset="0">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="3">
+    <widget class="QToolButton" name="doit">
+     <property name="text">
+      <string>...</string>
+     </property>
+     <property name="icon">
+      <iconset resource="../resources/neutrino.qrc">
+       <normaloff>:/autoRefresh</normaloff>:/autoRefresh</iconset>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <tabstops>
@@ -217,6 +228,8 @@
   <tabstop>maxAngle</tabstop>
   <tabstop>numAngle</tabstop>
  </tabstops>
- <resources/>
+ <resources>
+  <include location="../resources/neutrino.qrc"/>
+ </resources>
  <connections/>
 </ui>
