--- a/UIs/nInterferometry1.ui
+++ b/UIs/nInterferometry1.ui
@@ -6,22 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>283</width>
-    <height>86</height>
+    <width>277</width>
+    <height>100</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout" columnstretch="1,0,0,0,0">
-   <property name="verticalSpacing">
-    <number>1</number>
-   </property>
+  <layout class="QGridLayout" name="gridLayout" rowstretch="0,1,1" columnstretch="1,0,1,0">
    <property name="margin">
     <number>0</number>
    </property>
-   <item row="1" column="2">
-    <widget class="QDoubleSpinBox" name="maxStretch">
+   <item row="1" column="0">
+    <widget class="QDoubleSpinBox" name="minStretch">
      <property name="font">
       <font>
        <pointsize>10</pointsize>
@@ -47,8 +44,8 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
-    <widget class="QLabel" name="label_2">
+   <item row="1" column="1">
+    <widget class="QLabel" name="label">
      <property name="font">
       <font>
        <pointsize>10</pointsize>
@@ -62,8 +59,8 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="QDoubleSpinBox" name="minStretch">
+   <item row="1" column="2">
+    <widget class="QDoubleSpinBox" name="maxStretch">
      <property name="font">
       <font>
        <pointsize>10</pointsize>
@@ -134,6 +131,21 @@
      </property>
     </widget>
    </item>
+   <item row="2" column="1">
+    <widget class="QLabel" name="label_2">
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>to</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+   </item>
    <item row="2" column="2">
     <widget class="QDoubleSpinBox" name="maxAngle">
      <property name="font">
@@ -179,42 +191,36 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
-    <widget class="QLabel" name="label">
-     <property name="font">
-      <font>
-       <pointsize>10</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>to</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0" colspan="3">
-    <widget class="QComboBox" name="image">
-     <property name="font">
-      <font>
-       <pointsize>10</pointsize>
-      </font>
-     </property>
-     <property name="neutrinoImage" stdset="0">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="3">
-    <widget class="QToolButton" name="doit">
-     <property name="text">
-      <string>...</string>
-     </property>
-     <property name="icon">
-      <iconset resource="../resources/neutrino.qrc">
-       <normaloff>:/autoRefresh</normaloff>:/autoRefresh</iconset>
-     </property>
+   <item row="0" column="0" colspan="4">
+    <widget class="QWidget" name="widget" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <property name="margin">
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="QComboBox" name="image">
+        <property name="font">
+         <font>
+          <pointsize>10</pointsize>
+         </font>
+        </property>
+        <property name="neutrinoImage" stdset="0">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="doit">
+        <property name="text">
+         <string>...</string>
+        </property>
+        <property name="icon">
+         <iconset resource="../resources/neutrino.qrc">
+          <normaloff>:/icons/run.png</normaloff>:/icons/run.png</iconset>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
   </layout>
@@ -223,9 +229,9 @@
   <tabstop>image</tabstop>
   <tabstop>minStretch</tabstop>
   <tabstop>maxStretch</tabstop>
-  <tabstop>numStretch</tabstop>
   <tabstop>minAngle</tabstop>
   <tabstop>maxAngle</tabstop>
+  <tabstop>numStretch</tabstop>
   <tabstop>numAngle</tabstop>
  </tabstops>
  <resources>
