--- a/resources/neutrino.qrc
+++ b/resources/neutrino.qrc
@@ -43,7 +43,8 @@
         <file alias="scale">icons/scale.png</file>
         <file alias="short">icons/short.png</file>
         <file alias="name">icons/name.png</file>
-        <file alias="name">icons/icon.png</file>
+        <file alias="run">icons/run.png</file>
+        <file alias="trash">icons/trash.png</file>
         
         <file>icons/icon.png</file>
         <file>icons/colors.png</file>
@@ -89,6 +90,7 @@
         <file>icons/short.png</file>
         <file>icons/name.png</file>
         <file>icons/run.png</file>
+        <file>icons/trash.png</file>
         
         <file>shortcuts.html</file>
     </qresource>
