--- a/UIs/nInterferometry.ui
+++ b/UIs/nInterferometry.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>332</width>
-    <height>623</height>
+    <width>304</width>
+    <height>611</height>
    </rect>
   </property>
   <property name="font">
@@ -28,14 +28,21 @@
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout" stretch="1,0,1,0,0,0,0">
+   <layout class="QVBoxLayout" name="verticalLayout" stretch="1,1,0,0,0,0,0">
     <property name="margin">
-     <number>4</number>
+     <number>0</number>
     </property>
     <item>
      <widget class="QGroupBox" name="image1">
       <property name="title">
        <string>Reference</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QGroupBox" name="image2">
+      <property name="title">
+       <string>Shot</string>
       </property>
      </widget>
     </item>
@@ -242,13 +249,6 @@
         </widget>
        </item>
       </layout>
-     </widget>
-    </item>
-    <item>
-     <widget class="QGroupBox" name="image2">
-      <property name="title">
-       <string>Shot</string>
-      </property>
      </widget>
     </item>
     <item>
@@ -542,20 +542,13 @@
        <property name="margin">
         <number>0</number>
        </property>
-       <item row="0" column="4">
-        <widget class="QToolButton" name="symmetric">
+       <item row="0" column="0">
+        <widget class="QCheckBox" name="abel">
          <property name="toolTip">
-          <string>Symmetrize</string>
+          <string>Enable Abel</string>
          </property>
          <property name="text">
-          <string>...</string>
-         </property>
-         <property name="icon">
-          <iconset resource="../resources/neutrino.qrc">
-           <normaloff>:/icons/flipUpDown.png</normaloff>:/icons/flipUpDown.png</iconset>
-         </property>
-         <property name="checkable">
-          <bool>true</bool>
+          <string/>
          </property>
          <property name="neutrinoSave" stdset="0">
           <bool>true</bool>
@@ -579,22 +572,6 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="1">
-        <widget class="QSpinBox" name="abelX">
-         <property name="toolTip">
-          <string>abel x position</string>
-         </property>
-         <property name="minimum">
-          <number>-9999</number>
-         </property>
-         <property name="maximum">
-          <number>9999</number>
-         </property>
-         <property name="neutrinoSave" stdset="0">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
        <item row="0" column="2">
         <widget class="QSpinBox" name="abelY">
          <property name="toolTip">
@@ -611,50 +588,126 @@
          </property>
         </widget>
        </item>
+       <item row="0" column="1">
+        <widget class="QSpinBox" name="abelX">
+         <property name="toolTip">
+          <string>abel x position</string>
+         </property>
+         <property name="minimum">
+          <number>-9999</number>
+         </property>
+         <property name="maximum">
+          <number>9999</number>
+         </property>
+         <property name="neutrinoSave" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="4">
+        <widget class="QToolButton" name="symmetric">
+         <property name="toolTip">
+          <string>Symmetrize</string>
+         </property>
+         <property name="text">
+          <string>...</string>
+         </property>
+         <property name="icon">
+          <iconset resource="../resources/neutrino.qrc">
+           <normaloff>:/icons/flipUpDown.png</normaloff>:/icons/flipUpDown.png</iconset>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+         <property name="neutrinoSave" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
        <item row="1" column="0" colspan="5">
         <widget class="QWidget" name="widget" native="true">
-         <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="0,1,0,0,1,0,0">
+         <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="1,1,0,1,0">
           <property name="margin">
            <number>0</number>
           </property>
           <item>
-           <widget class="QLabel" name="label_4">
-            <property name="font">
-             <font>
-              <pointsize>10</pointsize>
-             </font>
-            </property>
-            <property name="text">
-             <string>Probe:</string>
-            </property>
+           <widget class="QWidget" name="widget_3" native="true">
+            <layout class="QHBoxLayout" name="horizontalLayout_6" stretch="1,0">
+             <property name="spacing">
+              <number>1</number>
+             </property>
+             <property name="margin">
+              <number>0</number>
+             </property>
+             <item>
+              <widget class="QLineEdit" name="probeLambda">
+               <property name="toolTip">
+                <string>Probe wavelength [nm]</string>
+               </property>
+               <property name="text">
+                <string>532</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+               </property>
+               <property name="neutrinoSave" stdset="0">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLabel" name="label_5">
+               <property name="font">
+                <font>
+                 <pointsize>10</pointsize>
+                </font>
+               </property>
+               <property name="text">
+                <string>nm</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
            </widget>
           </item>
           <item>
-           <widget class="QLineEdit" name="probeLambda">
-            <property name="toolTip">
-             <string>Probe wavelength [nm]</string>
-            </property>
-            <property name="text">
-             <string>532</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-            </property>
-            <property name="neutrinoSave" stdset="0">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLabel" name="label_5">
-            <property name="font">
-             <font>
-              <pointsize>10</pointsize>
-             </font>
-            </property>
-            <property name="text">
-             <string>nm</string>
-            </property>
+           <widget class="QWidget" name="widget_4" native="true">
+            <layout class="QHBoxLayout" name="horizontalLayout_7" stretch="1,0">
+             <property name="spacing">
+              <number>1</number>
+             </property>
+             <property name="margin">
+              <number>0</number>
+             </property>
+             <item>
+              <widget class="QLineEdit" name="imgRes">
+               <property name="toolTip">
+                <string>Magnification [µm/px]</string>
+               </property>
+               <property name="text">
+                <string>1</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+               </property>
+               <property name="neutrinoSave" stdset="0">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLabel" name="label_3">
+               <property name="font">
+                <font>
+                 <pointsize>10</pointsize>
+                </font>
+               </property>
+               <property name="text">
+                <string>µm/px</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
            </widget>
           </item>
           <item>
@@ -665,31 +718,37 @@
            </widget>
           </item>
           <item>
-           <widget class="QLineEdit" name="imgRes">
-            <property name="toolTip">
-             <string>Magnification [µm/px]</string>
-            </property>
-            <property name="text">
-             <string>1</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-            </property>
-            <property name="neutrinoSave" stdset="0">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLabel" name="label_3">
-            <property name="font">
-             <font>
-              <pointsize>10</pointsize>
-             </font>
-            </property>
-            <property name="text">
-             <string>µm/px</string>
-            </property>
+           <widget class="QWidget" name="widget_5" native="true">
+            <layout class="QHBoxLayout" name="horizontalLayout_8" stretch="0,0">
+             <property name="spacing">
+              <number>1</number>
+             </property>
+             <property name="margin">
+              <number>0</number>
+             </property>
+             <item>
+              <widget class="QLineEdit" name="abelMinMax">
+               <property name="toolTip">
+                <string>Min and max value for abel inversion</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLabel" name="label_4">
+               <property name="font">
+                <font>
+                 <pointsize>10</pointsize>
+                </font>
+               </property>
+               <property name="toolTip">
+                <string>Min and max value for abel inversion</string>
+               </property>
+               <property name="text">
+                <string>cutoff</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
            </widget>
           </item>
           <item>
@@ -707,19 +766,6 @@
            </widget>
           </item>
          </layout>
-        </widget>
-       </item>
-       <item row="0" column="0">
-        <widget class="QCheckBox" name="abel">
-         <property name="toolTip">
-          <string>Enable Abel</string>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-         <property name="neutrinoSave" stdset="0">
-          <bool>true</bool>
-         </property>
         </widget>
        </item>
       </layout>
@@ -754,6 +800,8 @@
    <addaction name="actionSavePref"/>
    <addaction name="separator"/>
    <addaction name="actionRect"/>
+   <addaction name="separator"/>
+   <addaction name="actionTrash"/>
    <addaction name="separator"/>
    <addaction name="actionDoWavelet"/>
    <addaction name="chained"/>
@@ -822,6 +870,18 @@
     <string>Do workflow</string>
    </property>
   </action>
+  <action name="actionTrash">
+   <property name="icon">
+    <iconset resource="../resources/neutrino.qrc">
+     <normaloff>:/icons/trash.png</normaloff>:/icons/trash.png</iconset>
+   </property>
+   <property name="text">
+    <string>trash</string>
+   </property>
+   <property name="toolTip">
+    <string>Trash old Files</string>
+   </property>
+  </action>
  </widget>
  <tabstops>
   <tabstop>widthCarrier</tabstop>
@@ -850,6 +910,7 @@
   <tabstop>symmetric</tabstop>
   <tabstop>probeLambda</tabstop>
   <tabstop>imgRes</tabstop>
+  <tabstop>abelMinMax</tabstop>
   <tabstop>doAbel</tabstop>
  </tabstops>
  <resources>
