--- a/UIs/neutrino.ui
+++ b/UIs/neutrino.ui
@@ -46,7 +46,7 @@
        <bool>true</bool>
       </property>
       <property name="acceptDrops">
-       <bool>true</bool>
+       <bool>false</bool>
       </property>
       <property name="backgroundBrush">
        <brush brushstyle="NoBrush">
