--- a/UIs/nInterferometry.ui
+++ b/UIs/nInterferometry.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>304</width>
-    <height>594</height>
+    <width>332</width>
+    <height>591</height>
    </rect>
   </property>
   <property name="font">
@@ -28,24 +28,10 @@
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout" stretch="1,1,0,0,0,0,0">
+   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,1,1,0,0,0,0">
     <property name="margin">
-     <number>0</number>
+     <number>4</number>
     </property>
-    <item>
-     <widget class="QGroupBox" name="image1">
-      <property name="title">
-       <string>Reference</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QGroupBox" name="image2">
-      <property name="title">
-       <string>Shot</string>
-      </property>
-     </widget>
-    </item>
     <item>
      <widget class="QGroupBox" name="groupBox_2">
       <property name="title">
@@ -55,34 +41,6 @@
        <property name="margin">
         <number>0</number>
        </property>
-       <item row="0" column="2">
-        <widget class="QDoubleSpinBox" name="angleCarrier">
-         <property name="toolTip">
-          <string>orientation</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-         </property>
-         <property name="suffix">
-          <string> ˚</string>
-         </property>
-         <property name="decimals">
-          <number>2</number>
-         </property>
-         <property name="minimum">
-          <double>-360.000000000000000</double>
-         </property>
-         <property name="maximum">
-          <double>360.000000000000000</double>
-         </property>
-         <property name="singleStep">
-          <double>0.100000000000000</double>
-         </property>
-         <property name="neutrinoSave" stdset="0">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
        <item row="0" column="3">
         <widget class="QDoubleSpinBox" name="weightCarrier">
          <property name="toolTip">
@@ -108,48 +66,6 @@
          </property>
          <property name="neutrinoSave" stdset="0">
           <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QDoubleSpinBox" name="widthCarrier">
-         <property name="toolTip">
-          <string>Interfringe</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-         </property>
-         <property name="suffix">
-          <string> px</string>
-         </property>
-         <property name="decimals">
-          <number>2</number>
-         </property>
-         <property name="minimum">
-          <double>-9999.000000000000000</double>
-         </property>
-         <property name="maximum">
-          <double>9999.000000000000000</double>
-         </property>
-         <property name="singleStep">
-          <double>0.100000000000000</double>
-         </property>
-         <property name="value">
-          <double>1.000000000000000</double>
-         </property>
-         <property name="neutrinoSave" stdset="0">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="4">
-        <widget class="QToolButton" name="doCarrier">
-         <property name="text">
-          <string>...</string>
-         </property>
-         <property name="icon">
-          <iconset resource="../resources/neutrino.qrc">
-           <normaloff>:/icons/refresh2.png</normaloff>:/icons/refresh2.png</iconset>
          </property>
         </widget>
        </item>
@@ -248,7 +164,91 @@
          </layout>
         </widget>
        </item>
+       <item row="0" column="2">
+        <widget class="QDoubleSpinBox" name="angleCarrier">
+         <property name="toolTip">
+          <string>orientation</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+         <property name="suffix">
+          <string> ˚</string>
+         </property>
+         <property name="decimals">
+          <number>2</number>
+         </property>
+         <property name="minimum">
+          <double>-360.000000000000000</double>
+         </property>
+         <property name="maximum">
+          <double>360.000000000000000</double>
+         </property>
+         <property name="singleStep">
+          <double>0.100000000000000</double>
+         </property>
+         <property name="neutrinoSave" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QDoubleSpinBox" name="widthCarrier">
+         <property name="toolTip">
+          <string>Interfringe</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+         <property name="suffix">
+          <string> px</string>
+         </property>
+         <property name="decimals">
+          <number>2</number>
+         </property>
+         <property name="minimum">
+          <double>-9999.000000000000000</double>
+         </property>
+         <property name="maximum">
+          <double>9999.000000000000000</double>
+         </property>
+         <property name="singleStep">
+          <double>0.100000000000000</double>
+         </property>
+         <property name="value">
+          <double>1.000000000000000</double>
+         </property>
+         <property name="neutrinoSave" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="4">
+        <widget class="QToolButton" name="doCarrier">
+         <property name="text">
+          <string>...</string>
+         </property>
+         <property name="icon">
+          <iconset resource="../resources/neutrino.qrc">
+           <normaloff>:/icons/refresh2.png</normaloff>:/icons/refresh2.png</iconset>
+         </property>
+        </widget>
+       </item>
       </layout>
+     </widget>
+    </item>
+    <item>
+     <widget class="QGroupBox" name="image1">
+      <property name="title">
+       <string>Reference</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QGroupBox" name="image2">
+      <property name="title">
+       <string>Shot</string>
+      </property>
      </widget>
     </item>
     <item>
@@ -355,7 +355,7 @@
       <property name="checkable">
        <bool>false</bool>
       </property>
-      <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,1,0,0,1,0">
+      <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,1,0,0,0,1,0">
        <property name="margin">
         <number>0</number>
        </property>
@@ -404,6 +404,19 @@
            <normaloff>:/icons/center.png</normaloff>:/icons/center.png</iconset>
          </property>
          <property name="checkable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="opposite">
+         <property name="toolTip">
+          <string>Opposite sign of phase</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="neutrinoSave" stdset="0">
           <bool>true</bool>
          </property>
         </widget>
