--- a/UIs/nRegionPath.ui
+++ b/UIs/nRegionPath.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>204</width>
-    <height>192</height>
+    <width>249</width>
+    <height>169</height>
    </rect>
   </property>
   <property name="font">
@@ -25,8 +25,39 @@
    <property name="layoutDirection">
     <enum>Qt::LeftToRight</enum>
    </property>
-   <layout class="QGridLayout" name="gridLayout" columnstretch="1,0">
-    <item row="1" column="0" colspan="2">
+   <layout class="QGridLayout" name="gridLayout" columnstretch="1,1,0">
+    <item row="6" column="1">
+     <widget class="QPushButton" name="duplicate">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Keep a copy</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0" colspan="2">
+     <widget class="QComboBox" name="image">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="neutrinoImage" stdset="0">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="1">
+     <widget class="QLineEdit" name="replace">
+      <property name="NeutrinoSave" stdset="0">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0">
      <widget class="QComboBox" name="defaultValue">
       <property name="neutrinoSave" stdset="0">
        <bool>true</bool>
@@ -58,12 +89,12 @@
       </item>
       <item>
        <property name="text">
-        <string>&lt;value below&gt;</string>
+        <string>value -&gt;</string>
        </property>
       </item>
      </widget>
     </item>
-    <item row="4" column="0">
+    <item row="6" column="0">
      <widget class="QPushButton" name="doIt">
       <property name="font">
        <font>
@@ -71,56 +102,37 @@
        </font>
       </property>
       <property name="text">
-       <string>Extract</string>
+       <string>Calculate</string>
       </property>
      </widget>
     </item>
-    <item row="4" column="1">
-     <widget class="QPushButton" name="doMask">
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
-      <property name="toolTip">
-       <string>Creates a 0/1 mask from the curve</string>
-      </property>
-      <property name="text">
-       <string>Generate Mask</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="0" colspan="2">
-     <widget class="QComboBox" name="image">
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
-      <property name="neutrinoImage" stdset="0">
-       <bool>true</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="0">
-     <widget class="QCheckBox" name="crop">
-      <property name="text">
-       <string>Crop</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="1">
-     <widget class="QCheckBox" name="negative">
-      <property name="text">
-       <string>Negative</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0" colspan="2">
-     <widget class="QLineEdit" name="replace">
-      <property name="NeutrinoSave" stdset="0">
-       <bool>true</bool>
-      </property>
+    <item row="4" column="0" colspan="2">
+     <widget class="QWidget" name="widget" native="true">
+      <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,1">
+       <property name="margin">
+        <number>0</number>
+       </property>
+       <item>
+        <widget class="QCheckBox" name="inverse">
+         <property name="text">
+          <string>Inverse</string>
+         </property>
+         <property name="neutrinoSave" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="crop">
+         <property name="text">
+          <string>Crop</string>
+         </property>
+         <property name="neutrinoSave" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </item>
    </layout>
@@ -213,12 +225,6 @@
  </widget>
  <tabstops>
   <tabstop>image</tabstop>
-  <tabstop>defaultValue</tabstop>
-  <tabstop>replace</tabstop>
-  <tabstop>crop</tabstop>
-  <tabstop>negative</tabstop>
-  <tabstop>doIt</tabstop>
-  <tabstop>doMask</tabstop>
  </tabstops>
  <resources>
   <include location="../resources/neutrino.qrc"/>
